--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,7 @@
 .main {
   min-height: 100vh;
   padding: 4rem 0;
-  flex: 1;
+  flex: 1.5;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -126,4 +126,20 @@
   .logo img {
     filter: invert(1);
   }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 500px;
+  width: 100%;
+}
+
+.form label {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
